crates/cribo/tests/snapshots/ruff_lint_results@stdlib_name_conflict_ordering.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
assertion_line: 552
input_file: crates/cribo/tests/fixtures/stdlib_name_conflict_ordering/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [],
    total_violations: 0,
}
