crates/cribo/tests/snapshots/ruff_lint_results@stickytape_explicit_relative_import_in_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_explicit_relative_import_in_init/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
